fix(lld): resolve 43 deferred followups — 3 case-study matrix cells contradicted their sources
Batch lld of the 306-item FOLLOWUP.json backlog. 22 files.

THE BEST FIND was the case-study pattern matrix in lld/case_studies/README.md: three cells
asserted patterns the problem READMEs they summarize explicitly do NOT use.
  - RideSharing/State listed Primary. RideSharing_README.md:190 says the design uses a
    transition table and is deliberately NOT GoF State.
  - VendingMachine/Singleton listed Supporting. That file says at :138 that Singleton is
    deliberately not used.
  - ParkingLot/State listed Supporting. There is no State in its pattern list; a spot is a
    boolean.
An index that contradicts the thing it indexes is worse than a missing index — a reader
studies the wrong pattern for the round. All three corrected with an explanatory paragraph.

Two more source-contradictions fixed in lld/CLAUDE.md and lld/README.md: the ChessGame and
ATM pattern lists disagreed with those problems' own "Patterns Used" sections
(Chess is Command/Observer/Singleton, not Composite/Command/State; ATM is
State/Command/Facade, not State/Template Method).

THE SUGGESTED FIX WAS WRONG on one item and the agent caught it: template_method proposed
adding `throws SQLException` to an override whose Spring supertype declares no checked
exception — it would not compile. Resolved with `obtainDataSource()` (protected, never-null,
unlike the @Nullable getter) plus a forced catch to UncategorizedSQLException, keeping the
missing-`finally` as the actual lesson.

Circular_Dependencies' tooling section was stale and partly false: JDepend's last release is
2005-09-27, and SonarQube dropped DSM/tangle metrics in 5.2 — so "Package Tangle Index
provides continuous monitoring" was not true of any current SonarQube. Rewritten around the
javaarchitecture:S7027/S7091 rules, with JDepend named as 2005-era.

Four reference implementations were read and found genuinely incomplete; rather than edit
.java f